--- a/Frontend/client/src/index.css
+++ b/Frontend/client/src/index.css
@@ -83,3 +83,17 @@ input[type="password"]:not(:placeholder-shown) ~ .input-text {
     @apply bg-background text-foreground;
   }
 }
+
+html::-webkit-scrollbar {
+  -webkit-appearance: none;
+  width: 5px;
+}
+
+html::-webkit-scrollbar-track {
+  background-color: #272727;
+}
+
+html::-webkit-scrollbar-thumb {
+  border-radius: 1rem;
+  background-color: #dcbc4b;
+}
