--- a/Frontend/client/src/index.css
+++ b/Frontend/client/src/index.css
@@ -97,3 +97,58 @@ html::-webkit-scrollbar-thumb {
   border-radius: 1rem;
   background-color: #dcbc4b;
 }
+
+/* Input Select Country + Phone */
+
+.country:hover {
+  background-color: #DCBC4B50 !important;
+}
+.dial-code, .country {
+  color: #FFFFFF !important;
+  font-weight: 700 !important;
+  text-shadow: #000 2px 2px 2px !important;
+}
+.flag{
+  box-shadow: #000 2px 2px 2px !important;
+}
+.search-emoji{
+  text-shadow: #00000080 2px 2px 2px !important;
+}
+.highlight {
+  background-color: #DCBC4B90 !important;
+}
+.search {
+  background: #DCBC4B99 !important;
+}
+.country-list {
+  border-radius: 0.375rem !important;
+  background-color: #D9D9D930 !important;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  width: 500% !important;
+}
+.search-box{
+  background-color: #D9D9D990 !important;
+  color: #272727 !important;
+  border-radius: 0.375rem !important;
+  width: 80% !important;
+  box-shadow: #00000070 2px 2px 2px !important;
+  font-weight: 600 !important;
+}
+.search-box::placeholder{
+  color: #272727 !important;
+}
+.selected-flag, .flag-dropdown{
+  background-color: #ffffff15 !important;
+}
+.selected-flag:hover{
+  background-color: #DCBC4B90 !important;
+}
+.form-control{
+  background-color: #ffffff30 !important;
+  width: 100% !important;
+  font-weight: 700 !important;
+  text-shadow: #00000080 2px 2px 2px !important;
+  height: 40px !important;
+  color: white !important;
+}
